packages/docs/versioned_docs/version-4.14.1/api/Flicking.mdx
---
custom_edit_url: null
---

```ts
class Flicking extends Component
```

<div>

</div>

<div className="container">
  <div className="row mb-2"><div className="col col--4"><strong>Properties</strong></div><div className="col col--4"><strong>Methods</strong></div><div className="col col--4"><strong>Events</strong></div></div>
  <div className="row"><div className="col col--4"><a href="#VERSION">VERSION</a><span className="badge badge--info margin-left--sm">static</span><br/><a href="#control">control</a><br/><a href="#camera">camera</a><br/><a href="#renderer">renderer</a><br/><a href="#viewport">viewport</a><br/><a href="#autoResizer">autoResizer</a><br/><a href="#initialized">initialized</a><br/><a href="#circularEnabled">circularEnabled</a><br/><a href="#virtualEnabled">virtualEnabled</a><br/><a href="#index">index</a><br/><a href="#element">element</a><br/><a href="#currentPanel">currentPanel</a><br/><a href="#panels">panels</a><br/><a href="#panelCount">panelCount</a><br/><a href="#visiblePanels">visiblePanels</a><br/><a href="#animating">animating</a><br/><a href="#holding">holding</a><br/><a href="#activePlugins">activePlugins</a><br/><a href="#align">align</a><br/><a href="#defaultIndex">defaultIndex</a><br/><a href="#horizontal">horizontal</a><br/><a href="#circular">circular</a><br/><a href="#circularFallback">circularFallback</a><br/><a href="#bound">bound</a><br/><a href="#adaptive">adaptive</a><br/><a href="#panelsPerView">panelsPerView</a><br/><a href="#noPanelStyleOverride">noPanelStyleOverride</a><br/><a href="#resizeOnContentsReady">resizeOnContentsReady</a><br/><a href="#nested">nested</a><br/><a href="#needPanelThreshold">needPanelThreshold</a><br/><a href="#preventEventsBeforeInit">preventEventsBeforeInit</a><br/><a href="#deceleration">deceleration</a><br/><a href="#easing">easing</a><br/><a href="#duration">duration</a><br/><a href="#inputType">inputType</a><br/><a href="#moveType">moveType</a><br/><a href="#threshold">threshold</a><br/><a href="#dragThreshold">dragThreshold</a><br/><a href="#interruptable">interruptable</a><br/><a href="#bounce">bounce</a><br/><a href="#iOSEdgeSwipeThreshold">iOSEdgeSwipeThreshold</a><br/><a href="#preventClickOnDrag">preventClickOnDrag</a><br/><a href="#preventDefaultOnDrag">preventDefaultOnDrag</a><br/><a href="#disableOnInit">disableOnInit</a><br/><a href="#changeOnHold">changeOnHold</a><br/><a href="#renderOnlyVisible">renderOnlyVisible</a><br/><a href="#virtual">virtual</a><br/><a href="#autoInit">autoInit</a><br/><a href="#autoResize">autoResize</a><br/><a href="#useResizeObserver">useResizeObserver</a><br/><a href="#observePanelResize">observePanelResize</a><br/><a href="#resizeDebounce">resizeDebounce</a><br/><a href="#maxResizeDebounce">maxResizeDebounce</a><br/><a href="#useFractionalSize">useFractionalSize</a><br/><a href="#externalRenderer">externalRenderer</a><br/><a href="#renderExternal">renderExternal</a><br/><a href="#optimizeSizeUpdate">optimizeSizeUpdate</a></div><div className="col col--4"><a href="#init">init</a><br/><a href="#destroy">destroy</a><br/><a href="#prev">prev</a><br/><a href="#next">next</a><br/><a href="#moveTo">moveTo</a><br/><a href="#updateAnimation">updateAnimation</a><br/><a href="#stopAnimation">stopAnimation</a><br/><a href="#getPanel">getPanel</a><br/><a href="#enableInput">enableInput</a><br/><a href="#disableInput">disableInput</a><br/><a href="#getStatus">getStatus</a><br/><a href="#setStatus">setStatus</a><br/><a href="#addPlugins">addPlugins</a><br/><a href="#removePlugins">removePlugins</a><br/><a href="#resize">resize</a><br/><a href="#append">append</a><br/><a href="#prepend">prepend</a><br/><a href="#insert">insert</a><br/><a href="#remove">remove</a><br/><a href="#trigger">trigger</a><br/><a href="#once">once</a><br/><a href="#hasOn">hasOn</a><br/><a href="#on">on</a><br/><a href="#off">off</a></div><div className="col col--4"><a href="#event-ready">ready</a><br/><a href="#event-beforeResize">beforeResize</a><br/><a href="#event-afterResize">afterResize</a><br/><a href="#event-holdStart">holdStart</a><br/><a href="#event-holdEnd">holdEnd</a><br/><a href="#event-moveStart">moveStart</a><br/><a href="#event-move">move</a><br/><a href="#event-moveEnd">moveEnd</a><br/><a href="#event-willChange">willChange</a><br/><a href="#event-changed">changed</a><br/><a href="#event-willRestore">willRestore</a><br/><a href="#event-restored">restored</a><br/><a href="#event-select">select</a><br/><a href="#event-needPanel">needPanel</a><br/><a href="#event-visibleChange">visibleChange</a><br/><a href="#event-reachEdge">reachEdge</a><br/><a href="#event-panelChange">panelChange</a></div></div>
</div>

## constructor
```ts
new Flicking(root, options)
```

<div>

</div>

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|root|HTMLElement \| string|||A root HTMLElement to initialize Flicking on it. When it's a typeof `string`, it should be a css selector string|
|options|object|✔️|{}|An options object for Flicking.|

**Throws**: [FlickingError](FlickingError)

|code|condition|<br />|---|---|<br />|[WRONG_TYPE](ERROR_CODE)|When the root is not either string or HTMLElement|<br />|[ELEMENT_NOT_FOUND](ERROR_CODE)|When the element with given CSS selector does not exist|

```ts
import Flicking from "@egjs/flicking";

// Creating new instance of Flicking with HTMLElement
const flicking = new Flicking(document.querySelector(".flicking-viewport"), { circular: true });

// Creating new instance of Flicking with CSS selector
const flicking2 = new Flicking(".flicking-viewport", { circular: true });
```

## Properties
### VERSION {#VERSION}

<div>
  <span className="badge badge--info">static</span>
  <span className="badge badge--warning">readonly</span>
</div>

Version info string

**Type**: string

```ts
Flicking.VERSION;  // ex) 4.0.0
```

### control {#control}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

[Control](Control) instance of the Flicking

**Type**: [Control](Control)

**Default**: [SnapControl](SnapControl)

**See**:
- [Control](Control)
- [SnapControl](SnapControl)
- [FreeControl](FreeControl)

### camera {#camera}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

[Camera](Camera) instance of the Flicking

**Type**: [Camera](Camera)

**Default**: LinearCamera

**See**:
- [Camera](Camera)
- LinearCamera
- BoundCamera
- CircularCamera

### renderer {#renderer}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

[Renderer](Renderer) instance of the Flicking

**Type**: [Renderer](Renderer)

**Default**: [VanillaRenderer](VanillaRenderer)

**See**:
- [Renderer](Renderer)
- [VanillaRenderer](VanillaRenderer)
- [ExternalRenderer](ExternalRenderer)

### viewport {#viewport}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

A component that manages viewport size

**Type**: [Viewport](Viewport)

**See**:
- [Viewport](Viewport)

### autoResizer {#autoResizer}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

[AutoResizer](AutoResizer) instance of the Flicking

### initialized {#initialized}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Whether Flicking's [init()](Flicking#init) is called.<br />This is `true` when [init()](Flicking#init) is called, and is `false` after calling [destroy()](Flicking#destroy).

**Type**: boolean

**Default**: false

### circularEnabled {#circularEnabled}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Whether the `circular` option is enabled.<br />The [circular](Flicking#circular) option can't be enabled when sum of the panel sizes are too small.

**Type**: boolean

**Default**: false

### virtualEnabled {#virtualEnabled}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Whether the `virtual` option is enabled.<br />The [virtual](Flicking#virtual) option can't be enabled when  [panelsPerView](Flicking#panelsPerView) is less or equal than zero.

**Type**: boolean

**Default**: false

### index {#index}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Index number of the [currentPanel](Flicking#currentPanel)

**Type**: number

**Default**: 0

### element {#element}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

The root(`.flicking-viewport`) element

**Type**: HTMLElement

### currentPanel {#currentPanel}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Currently active panel

**Type**: [Panel](Panel)

**See**:
- [Panel](Panel)

### panels {#panels}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Array of panels

**Type**: Array&lt;[Panel](Panel)&gt;

**See**:
- [Panel](Panel)

### panelCount {#panelCount}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Count of panels

**Type**: number

### visiblePanels {#visiblePanels}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Array of panels that is visible at the current position

**Type**: Array&lt;[Panel](Panel)&gt;

**See**:
- [Panel](Panel)

### animating {#animating}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Whether Flicking's animating

**Type**: boolean

### holding {#holding}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Whether user is clicking or touching

**Type**: boolean

### activePlugins {#activePlugins}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

A current list of activated plugins

**Type**: Array&lt;[Plugin](Plugin)&gt;

### align {#align}

<div>

</div>

Align position of the panels within viewport. You can set different values each for the panel and camera

**Type**: [ALIGN](ALIGN) \| string \| number \| Object

**Default**: "center"

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|panel|[ALIGN](ALIGN) \| string \| number|The align value for each [Panel](Panel)s|
|camera|[ALIGN](ALIGN) \| string \| number|The align value for [Camera](Camera)|

**See**:
- [align ( Options )](https://naver.github.io/egjs-flicking/Options#align)
```ts
const possibleOptions = [
  // Literal strings
  "prev", "center", "next",
  // % values, applied to both panel & camera
  "0%", "25%", "42%",
  // px values, arithmetic calculation with (+/-) is also allowed.
  "0px", "100px", "50% - 25px",
  // numbers, same to number + px ("0px", "100px")
  0, 100, 1000,
  // Setting a different value for panel & camera
  { panel: "10%", camera: "25%" }
];

possibleOptions.forEach(align => {
  new Flicking("#el", { align });
});
```

### defaultIndex {#defaultIndex}

<div>

</div>

Index of the panel to move when Flicking's [init()](Flicking#init) is called. A zero-based integer

**Type**: number

**Default**: 0

**See**:
- [defaultIndex ( Options )](https://naver.github.io/egjs-flicking/Options#defaultindex)

### horizontal {#horizontal}

<div>

</div>

Direction of panel movement (true: horizontal, false: vertical)

**Type**: boolean

**Default**: true

**See**:
- [horizontal ( Options )](https://naver.github.io/egjs-flicking/Options#horizontal)

### circular {#circular}

<div>

</div>

Enables circular(continuous loop) mode, which connects first/last panel for continuous scrolling.

**Type**: boolean

**Default**: false

**See**:
- [circular ( Options )](https://naver.github.io/egjs-flicking/Options#circular)

### circularFallback {#circularFallback}

<div>

</div>

Set panel control mode for the case when circular cannot be enabled.<br />"linear" will set the view's range from the top of the first panel to the top of the last panel.<br />"bound" will prevent the view from going out of the first/last panel, so it won't show empty spaces before/after the first/last panel.

**Type**: string

**Default**: "linear"

**See**:
- [CIRCULAR_FALLBACK](CIRCULAR_FALLBACK)
- [circularFallback ( Options )](https://naver.github.io/egjs-flicking/Options#circularfallback)

### bound {#bound}

<div>

</div>

Prevent the view(camera element) from going out of the first/last panel, so it won't show empty spaces before/after the first/last panel<br />Only can be enabled when `circular=false`

**Type**: boolean

**Default**: false

**See**:
- [bound ( Options )](https://naver.github.io/egjs-flicking/Options#bound)

### adaptive {#adaptive}

<div>

</div>

Update height of the viewport element after movement same to the height of the panel below. This can be only enabled when `horizontal=true`

**Type**: boolean

**Default**: false

**See**:
- [adaptive ( Options )](https://naver.github.io/egjs-flicking/Options#adaptive)

### panelsPerView {#panelsPerView}

<div>

</div>

A visible number of panels on viewport. Enabling this option will automatically resize panel size

**Type**: number

**Default**: -1

**See**:
- [panelsPerView ( Options )](https://naver.github.io/egjs-flicking/Options#panelsperview)

### noPanelStyleOverride {#noPanelStyleOverride}

<div>

</div>

Enabling this option will not change `width/height` style of the panels if [Flicking#panelsPerView](Flicking#panelsPerView) is enabled.<br />This behavior can be useful in terms of performance when you're manually managing all panel sizes

**Type**: boolean

**Default**: false

### resizeOnContentsReady {#resizeOnContentsReady}

<div>

</div>

Enabling this option will automatically call [Flicking#resize](Flicking#resize) when all image/video inside panels are loaded.<br />This can be useful when you have contents inside Flicking that changes its size when it's loaded

**Type**: boolean

**Default**: false

**See**:
- [resizeOnContentsReady ( Options )](https://naver.github.io/egjs-flicking/Options#resizeOnContentsReady)

### nested {#nested}

<div>

</div>

If you enable this option on child Flicking when the Flicking is placed inside the Flicking, the parent Flicking will move in the same direction after the child Flicking reaches the first/last panel.<br />If the parent Flicking and child Flicking have different horizontal option, you do not need to set this option.

**Type**: boolean

**Default**: false

**See**:
- [nested ( Options )](https://naver.github.io/egjs-flicking/Options#nested)

### needPanelThreshold {#needPanelThreshold}

<div>

</div>

A Threshold from viewport edge before triggering `needPanel` event

**Type**: number

**Default**: 0

**See**:
- [needPanelThreshold ( Options )](https://naver.github.io/egjs-flicking/Options#needpanelthreshold)

### preventEventsBeforeInit {#preventEventsBeforeInit}

<div>

</div>

When enabled, events are not triggered before `ready` when initializing

**Type**: boolean

**Default**: true

**See**:
- [preventEventsBeforeInit ( Options )](https://naver.github.io/egjs-flicking/Options#preventeventsbeforeinit)

### deceleration {#deceleration}

<div>

</div>

Deceleration value for panel movement animation which is triggered by user input. A higher value means a shorter animation time

**Type**: number

**Default**: 0.0075

**See**:
- [deceleration ( Options )](https://naver.github.io/egjs-flicking/Options#deceleration)

### easing {#easing}

<div>

</div>

An easing function applied to the panel movement animation. Default value is `easeOutCubic`

**Type**: function

**Default**: x =&gt; 1 - Math.pow(1 - x, 3)

**See**:
- Easing Functions Cheat Sheet [http://easings.net/](http://easings.net/)
- [Easing ( Options )](https://naver.github.io/egjs-flicking/Options#easing)

### duration {#duration}

<div>

</div>

Default duration of the animation (ms)

**Type**: number

**Default**: 500

**See**:
- [duration ( Options )](https://naver.github.io/egjs-flicking/Options#duration)

### inputType {#inputType}

<div>

</div>

Types of input devices to enable

**Type**: Array&lt;string&gt;

**Default**: ["touch", "mouse"]

**See**:
- [Possible values (PanInputOption#inputType)](https://naver.github.io/egjs-axes/Options#paninput-options)
- [inputType ( Options )](https://naver.github.io/egjs-flicking/Options#inputtype)

### moveType {#moveType}

<div>

</div>

Movement style by user input. This will change instance type of [Flicking#control](Flicking#control)<br />You can use the values of the constant [MOVE_TYPE](MOVE_TYPE)

**Type**: [MOVE_TYPE](MOVE_TYPE) \| Pair.&lt;string, object&gt;

**Default**: "snap"

**See**:
- [moveType ( Options )](https://naver.github.io/egjs-flicking/Options#movetype)
|moveType|control|options|
|:---:|:---:|:---:|
|"snap"|[SnapControl](SnapControl)||
|"freeScroll"|[FreeControl](FreeControl)|[FreeControlOptions](FreeControlOptions)|

```ts
import Flicking, { MOVE_TYPE } from "@egjs/flicking";

const flicking = new Flicking({
  moveType: MOVE_TYPE.SNAP
});
```

```ts
const flicking = new Flicking({
  // If you want more specific settings for the moveType
  // [moveType, options for that moveType]
  // In this case, it's ["freeScroll", FreeControlOptions]
  moveType: [MOVE_TYPE.FREE_SCROLL, { stopAtEdge: true }]
});
```

### threshold {#threshold}

<div>

</div>

Movement threshold to change panel (unit: px). It should be dragged above the threshold to change the current panel.

**Type**: number

**Default**: 40

**See**:
- [Threshold ( Options )](https://naver.github.io/egjs-flicking/Options#threshold)

### dragThreshold {#dragThreshold}

<div>

</div>

Minimal distance of user input before recognizing (unit: px). It should be dragged above the dragThreshold to move the panel.

**Type**: number

**Default**: 1

**See**:
- [dragThreshold ( Options )](https://naver.github.io/egjs-flicking/Options#dragThreshold)

### interruptable {#interruptable}

<div>

</div>

Set animation to be interruptable by click/touch.

**Type**: boolean

**Default**: true

**See**:
- [Interruptable ( Options )](https://naver.github.io/egjs-flicking/Options#interruptable)

### bounce {#bounce}

<div>

</div>

The size value of the bounce area. Only can be enabled when `circular=false`.<br />You can set different bounce value for prev/next direction by using array.<br />`number` for px value, and `string` for px, and % value relative to viewport size.<br />You have to call [Control#updateInput](Control#updateInput) after changing this to take effect.

**Type**: string \| number \| Array&lt;(string\|number)&gt;

**Default**: "20%"

**See**:
- [bounce ( Options )](https://naver.github.io/egjs-flicking/Options#bounce)
```ts
const possibleOptions = [
  // % values, relative to viewport element(".flicking-viewport")'s size
  "0%", "25%", "42%",
  // px values, arithmetic calculation with (+/-) is also allowed.
  "0px", "100px", "50% - 25px",
  // numbers, same to number + px ("0px", "100px")
  0, 100, 1000
];
```

```ts
const flicking = new Flicking("#el", { bounce: "20%" });

flicking.bounce = "100%";
flicking.control.updateInput(); // Call this to update!
```

### iOSEdgeSwipeThreshold {#iOSEdgeSwipeThreshold}

<div>

</div>

Size of the area from the right edge in iOS safari (in px) which enables swipe-back or swipe-forward

**Type**: number

**Default**: 30

**See**:
- [iOSEdgeSwipeThreshold ( Options )](https://naver.github.io/egjs-flicking/Options#iosedgeswipethreshold)

### preventClickOnDrag {#preventClickOnDrag}

<div>

</div>

Automatically prevent `click` event if the user has dragged at least a single pixel on the viewport element

**Type**: boolean

**Default**: true

**See**:
- [preventClickOnDrag ( Options )](https://naver.github.io/egjs-flicking/Options#preventclickondrag)

### preventDefaultOnDrag {#preventDefaultOnDrag}

<div>

</div>

Whether to use the [preventDefault](https://developer.mozilla.org/ko/docs/Web/API/Event/preventDefault) when the user starts dragging

**Type**: boolean

**Default**: false

**See**:
- [preventDefaultOnDrag ( Options )](https://naver.github.io/egjs-flicking/Options#preventDefaultOnDrag)

### disableOnInit {#disableOnInit}

<div>

</div>

Automatically call [disableInput()](Flicking#disableInput) on initialization

**Type**: boolean

**Default**: false

**See**:
- [disableOnInit ( Options )](https://naver.github.io/egjs-flicking/Options#disableoninit)

### changeOnHold {#changeOnHold}

<div>

</div>

Change active panel index on mouse/touch hold while animating.<br />`index` of the `willChange`/`willRestore` event will be used as new index.

**Type**: boolean

**Default**: false

**See**:
- [changeOnHold ( Options )](https://naver.github.io/egjs-flicking/Options#changeonhold)

### renderOnlyVisible {#renderOnlyVisible}

<div>

</div>

Whether to render visible panels only. This can dramatically increase performance when there're many panels

**Type**: boolean

**Default**: false

**See**:
- [renderOnlyVisible ( Options )](https://naver.github.io/egjs-flicking/Options#renderonlyvisible)

### virtual {#virtual}

<div>

</div>

By enabling this option, it will reduce memory consumption by restricting the number of DOM elements to `panelsPerView + 1`<br />Must be used with `panelsPerview`.<br />After Flicking's initialized, this property can be used to add/remove the panel count.

**Type**: VirtualManager

|PROPERTY|TYPE|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|
|renderPanel|function||A rendering function for the panel element's innerHTML|
|initialPanelCount|number||Initial panel count to render|
|cache|boolean|false|Whether to cache rendered panel's innerHTML|
|panelClass|string|"flicking-panel"|The class name that will be applied to rendered panel elements|

**See**:
- [virtual ( Options )](https://naver.github.io/egjs-flicking/Options#virtual)
```ts
import Flicking, { VirtualPanel } from "@egjs/flicking";

const flicking = new Flicking("#some_el", {
  panelsPerView: 3,
  virtual: {
    renderPanel: (panel: VirtualPanel, index: number) => `Panel ${index}`,
    initialPanelCount: 100
  }
});

// Add 100 virtual panels (at the end)
flicking.virtual.append(100);

// Remove 100 virtual panels from 0 to 100
flicking.virtual.remove(0, 100);
```

### autoInit {#autoInit}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Call [init()](Flicking#init) automatically when creating Flicking's instance

**Type**: boolean

**Default**: true

**See**:
- [autoInit ( Options )](https://naver.github.io/egjs-flicking/Options#autoinit)

### autoResize {#autoResize}

<div>

</div>

Whether to automatically call [resize()](Flicking#resize) when the viewport element(.flicking-viewport)'s size is changed

**Type**: boolean

**Default**: true

### useResizeObserver {#useResizeObserver}

<div>

</div>

Whether to listen [ResizeObserver](https://developer.mozilla.org/en-US/docs/Web/API/ResizeObserver)'s event instead of Window's [resize](https://developer.mozilla.org/ko/docs/Web/API/Window/resize_event) event when using the `autoResize` option

**Type**: boolean

**Default**: true

**See**:
- [useResizeObserver ( Options )](https://naver.github.io/egjs-flicking/Options#useresizeobserver)

### observePanelResize {#observePanelResize}

<div>

</div>

Whether to use [ResizeObserver](https://developer.mozilla.org/en-US/docs/Web/API/ResizeObserver) to observe the size of the panel element<br />This is only available when `useResizeObserver` is enabled.<br />This option garantees that the resize event is triggered when the size of the panel element is changed.

### resizeDebounce {#resizeDebounce}

<div>

</div>

Delays size recalculation from `autoResize` by the given time in milisecond.<br />If the size is changed again while being delayed, it cancels the previous one and delays from the beginning again.<br />This can increase performance by preventing `resize` being called too often.

**Type**: number

**Default**: 0

**See**:
- [resizeDebounce ( Options )](https://naver.github.io/egjs-flicking/Options#resizedebounce)

### maxResizeDebounce {#maxResizeDebounce}

<div>

</div>

The maximum time for size recalculation delay when using `resizeDebounce`, in milisecond.<br />This guarantees that size recalculation is performed at least once every (n)ms.

**Type**: number

**Default**: 100

**See**:
- [maxResizeDebounce ( Options )](https://naver.github.io/egjs-flicking/Options#maxresizedebounce)

### useFractionalSize {#useFractionalSize}

<div>

</div>

By enabling this, Flicking will calculate all internal size with CSS width computed with getComputedStyle.<br />This can prevent 1px offset issue in some cases where panel size has the fractional part.<br />All sizes will have the original size before CSS [transform](https://developer.mozilla.org/en-US/docs/Web/CSS/transform) is applied on the element.

**Type**: boolean

**Default**: false

**See**:
- [useFractionalSize ( Options )](https://naver.github.io/egjs-flicking/Options#usefractionalsize)

### externalRenderer {#externalRenderer}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

This is an option for the frameworks(React, Vue, Angular, ...). Don't set it as it's automatically managed by Flicking.

**Default**: null

### renderExternal {#renderExternal}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

This is an option for the frameworks(React, Vue, Angular, ...). Don't set it as it's automatically managed by Flicking.

**Default**: null

### optimizeSizeUpdate {#optimizeSizeUpdate}

<div>

</div>

This option works only when autoResize is set to true.<br />By default, autoResize listens to changes in both the viewport's width and height, updating all panel sizes accordingly.<br />When optimizeSizeUpdate is enabled, the update behavior is optimized based on the flicking direction:<br />If direction is "horizontal", only changes in width will trigger panel size updates.<br />If direction is "vertical", only changes in height will do so.<br />This option is useful when panel heights vary and unwanted flickering occurs due to frequent size recalculations during flicking. Enabling optimizeSizeUpdate prevents unnecessary updates and helps maintain visual stability.

**Type**: boolean

**Default**: false

## Methods

### init {#init}

<div>

</div>

Initialize Flicking and move to the default index<br />This is automatically called on Flicking's constructor when `autoInit` is true(default)

**Returns**: Promise&lt;void&gt;

**Emits**: [Flicking#event:ready](Flicking#event-ready)

### destroy {#destroy}

<div>

</div>

Destroy Flicking and remove all event handlers

**Returns**: void

### prev {#prev}

<div>
  <span className="badge badge--success">async</span>
</div>

Move to the previous panel (current index - 1)

**Returns**: Promise&lt;void&gt;
- A Promise which will be resolved after reaching the previous panel

**Emits**: [Flicking#event:moveStart](Flicking#event-moveStart), [Flicking#event:move](Flicking#event-move), [Flicking#event:moveEnd](Flicking#event-moveEnd), [Flicking#event:willChange](Flicking#event-willChange), [Flicking#event:changed](Flicking#event-changed), [Flicking#event:willRestore](Flicking#event-willRestore), [Flicking#event:restored](Flicking#event-restored), [Flicking#event:needPanel](Flicking#event-needPanel), [Flicking#event:visibleChange](Flicking#event-visibleChange), [Flicking#event:reachEdge](Flicking#event-reachEdge)

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|duration|number|✔️|[options.duration](Flicking#duration)|Duration of the panel movement animation (unit: ms)|

**Throws**: [FlickingError](FlickingError)

|code|condition|<br />|---|---|<br />|[INDEX_OUT_OF_RANGE](ERROR_CODE)|When the previous panel does not exist|<br />|[ANIMATION_ALREADY_PLAYING](ERROR_CODE)|When the animation is already playing|<br />|[ANIMATION_INTERRUPTED](ERROR_CODE)|When the animation is interrupted by user input|<br />|[STOP_CALLED_BY_USER](ERROR_CODE)|When the any of the event's `stop()` is called|

### next {#next}

<div>
  <span className="badge badge--success">async</span>
</div>

Move to the next panel (current index + 1)

**Returns**: Promise&lt;void&gt;
- A Promise which will be resolved after reaching the next panel

**Emits**: [Flicking#event:moveStart](Flicking#event-moveStart), [Flicking#event:move](Flicking#event-move), [Flicking#event:moveEnd](Flicking#event-moveEnd), [Flicking#event:willChange](Flicking#event-willChange), [Flicking#event:changed](Flicking#event-changed), [Flicking#event:willRestore](Flicking#event-willRestore), [Flicking#event:restored](Flicking#event-restored), [Flicking#event:needPanel](Flicking#event-needPanel), [Flicking#event:visibleChange](Flicking#event-visibleChange), [Flicking#event:reachEdge](Flicking#event-reachEdge)

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|duration|number|✔️|[options.duration](Flicking#duration)|Duration of the panel movement animation (unit: ms).|

**Throws**: [FlickingError](FlickingError)

|code|condition|<br />|---|---|<br />|[INDEX_OUT_OF_RANGE](ERROR_CODE)|When the next panel does not exist|<br />|[ANIMATION_ALREADY_PLAYING](ERROR_CODE)|When the animation is already playing|<br />|[ANIMATION_INTERRUPTED](ERROR_CODE)|When the animation is interrupted by user input|<br />|[STOP_CALLED_BY_USER](ERROR_CODE)|When the any of the event's `stop()` is called|

### moveTo {#moveTo}

<div>
  <span className="badge badge--success">async</span>
</div>

Move to the panel with given index

**Returns**: Promise&lt;void&gt;
- A Promise which will be resolved after reaching the target panel

**Emits**: [Flicking#event:moveStart](Flicking#event-moveStart), [Flicking#event:move](Flicking#event-move), [Flicking#event:moveEnd](Flicking#event-moveEnd), [Flicking#event:willChange](Flicking#event-willChange), [Flicking#event:changed](Flicking#event-changed), [Flicking#event:willRestore](Flicking#event-willRestore), [Flicking#event:restored](Flicking#event-restored), [Flicking#event:needPanel](Flicking#event-needPanel), [Flicking#event:visibleChange](Flicking#event-visibleChange), [Flicking#event:reachEdge](Flicking#event-reachEdge)

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number|||The index of the panel to move|
|duration|number|✔️|[options.duration](Flicking#duration)|Duration of the animation (unit: ms)|
|direction|[DIRECTION](DIRECTION)|✔️|DIRECTION.NONE|Direction to move, only available in the [circular](Flicking#circular) mode|

**Throws**: [FlickingError](FlickingError)

|code|condition|<br />|---|---|<br />|[INDEX_OUT_OF_RANGE](ERROR_CODE)|When the root is not either string or HTMLElement|<br />|[ANIMATION_ALREADY_PLAYING](ERROR_CODE)|When the animation is already playing|<br />|[ANIMATION_INTERRUPTED](ERROR_CODE)|When the animation is interrupted by user input|<br />|[STOP_CALLED_BY_USER](ERROR_CODE)|When the any of the event's `stop()` is called|

### updateAnimation {#updateAnimation}

<div>

</div>

Change the destination and duration of the animation currently playing

**Returns**: void

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number|||The index of the panel to move|
|duration|number|✔️||Duration of the animation (unit: ms)|
|direction|[DIRECTION](DIRECTION)|✔️||Direction to move, only available in the [circular](Flicking#circular) mode|

**Throws**: [FlickingError](FlickingError)

[INDEX_OUT_OF_RANGE](ERROR_CODE) When the root is not either string or HTMLElement

### stopAnimation {#stopAnimation}

<div>

</div>

Stops the animation currently playing

**Returns**: void

**Emits**: [Flicking#event:moveEnd](Flicking#event-moveEnd)

### getPanel {#getPanel}

<div>

</div>

Return the [Panel](Panel) at the given index. `null` if it doesn't exists.

**Returns**: [Panel](Panel) \| null
- Panel at the given index

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number||||

**See**:
- [Panel](Panel)
```ts
const panel = flicking.getPanel(0);
// Which is a shorthand to...
const samePanel = flicking.panels[0];
```

### enableInput {#enableInput}

<div>

</div>

Enable input from the user (mouse/touch)

**Returns**: this

### disableInput {#disableInput}

<div>

</div>

Disable input from the user (mouse/touch)

**Returns**: this

### getStatus {#getStatus}

<div>

</div>

Get current flicking status. You can restore current state by giving returned value to [setStatus()](Flicking#setStatus)

**Returns**: [Status](Status)
- An object with current status value information

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|options|object|✔️|{}|Status retrieving options|
|options.index|boolean|✔️|true|Include current panel index to the returning status. Camera will automatically move to the given index when the [setStatus](Flicking#setStatus) is called|
|options.position|boolean|✔️|true|Include camera position to the returning status. This works only when the [moveType](Flicking#moveType) is `freeScroll`|
|options.includePanelHTML|boolean|✔️|false|Include panel's `outerHTML` to the returning status|
|options.visiblePanelsOnly|boolean|✔️|false|Include only [visiblePanel](Flicking#visiblePanel)'s HTML. This option is available only when the `includePanelHTML` is true|

### setStatus {#setStatus}

<div>

</div>

Restore to the state of the given [Status](Status)

**Returns**: void

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|status|Partial&lt;[Status](Status)&gt;|||Status value to be restored. You should use the return value of the [getStatus()](Flicking#getStatus) method|

### addPlugins {#addPlugins}

<div>

</div>

Add plugins that can have different effects on Flicking

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|plugins|[Plugin](Plugin)|||The plugin(s) to add|

**See**:
- https://github.com/naver/egjs-flicking-plugins

### removePlugins {#removePlugins}

<div>

</div>

Remove plugins from Flicking.

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|plugin|[Plugin](Plugin)|||The plugin(s) to remove.|

**See**:
- https://github.com/naver/egjs-flicking-plugins

### resize {#resize}

<div>
  <span className="badge badge--success">async</span>
</div>

Update viewport/panel sizes

**Returns**: this

**Emits**: [Flicking#event:beforeResize](Flicking#event-beforeResize), [Flicking#event:afterResize](Flicking#event-afterResize)

### append {#append}

<div>

</div>

Add new panels after the last panel

**Returns**: Array&lt;[Panel](Panel)&gt;
- An array of appended panels

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|element|[ElementLike](ElementLike) \| Array&lt;[ElementLike](ElementLike)&gt;|||A new HTMLElement, a outerHTML of element, or an array of both|

**Throws**: [FlickingError](FlickingError)

[ERROR_CODE.NOT_ALLOWED_IN_FRAMEWORK](ERROR_CODE) if called on frameworks (React, Angular, Vue...)
**See**:
- [Panel](Panel)
- [ElementLike](ElementLike)
```ts
const flicking = new Flicking("#flick");
// These are possible parameters
flicking.append(document.createElement("div"));
flicking.append("\<div\>Panel\</div\>");
flicking.append(["\<div\>Panel\</div\>", document.createElement("div")]);
// Even this is possible
flicking.append("\<div\>Panel 1\</div\>\<div\>Panel 2\</div\>");
```

### prepend {#prepend}

<div>

</div>

Add new panels before the first panel<br />This will increase index of panels after by the number of panels added

**Returns**: Array&lt;[Panel](Panel)&gt;
- An array of prepended panels

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|element|[ElementLike](ElementLike) \| Array&lt;[ElementLike](ElementLike)&gt;|||A new HTMLElement, a outerHTML of element, or an array of both|

**Throws**: [FlickingError](FlickingError)

[ERROR_CODE.NOT_ALLOWED_IN_FRAMEWORK](ERROR_CODE) if called on frameworks (React, Angular, Vue...)
**See**:
- [Panel](Panel)
- [ElementLike](ElementLike)
```ts
const flicking = new eg.Flicking("#flick");
flicking.prepend(document.createElement("div"));
flicking.prepend("\<div\>Panel\</div\>");
flicking.prepend(["\<div\>Panel\</div\>", document.createElement("div")]);
// Even this is possible
flicking.prepend("\<div\>Panel 1\</div\>\<div\>Panel 2\</div\>");
```

### insert {#insert}

<div>

</div>

Insert new panels at given index<br />This will increase index of panels after by the number of panels added

**Returns**: Array&lt;[Panel](Panel)&gt;
- An array of prepended panels

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number|||Index to insert new panels at|
|element|[ElementLike](ElementLike) \| Array&lt;[ElementLike](ElementLike)&gt;|||A new HTMLElement, a outerHTML of element, or an array of both|

**Throws**: [FlickingError](FlickingError)

[ERROR_CODE.NOT_ALLOWED_IN_FRAMEWORK](ERROR_CODE) if called on frameworks (React, Angular, Vue...)

```ts
const flicking = new eg.Flicking("#flick");
flicking.insert(0, document.createElement("div"));
flicking.insert(2, "\<div\>Panel\</div\>");
flicking.insert(1, ["\<div\>Panel\</div\>", document.createElement("div")]);
// Even this is possible
flicking.insert(3, "\<div\>Panel 1\</div\>\<div\>Panel 2\</div\>");
```

### remove {#remove}

<div>

</div>

Remove the panel at the given index<br />This will decrease index of panels after by the number of panels removed

**Returns**: Array&lt;[Panel](Panel)&gt;
- An array of removed panels

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number|||Index of panel to remove|
|deleteCount|number|✔️|1|Number of panels to remove from index|

### trigger {#trigger}

<div>
  <span className="badge badge--danger">inherited</span>
</div>

Trigger a custom event.

**Returns**: this
- An instance of the component itself

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|event|string \| ComponentEvent|||The name of the custom event to be triggered or an instance of the ComponentEvent|
|params|Array&lt;any&gt; \| $ts:...|||Event data to be sent when triggering a custom event|

```ts
import Component, { ComponentEvent } from "@egjs/component";

class Some extends Component<{
  beforeHi: ComponentEvent<{ foo: number; bar: string }>;
  hi: { foo: { a: number; b: boolean } };
  someEvent: (foo: number, bar: string) => void;
  someOtherEvent: void; // When there's no event argument
}> {
  some(){
    if(this.trigger("beforeHi")){ // When event call to stop return false.
      this.trigger("hi");// fire hi event.
    }
  }
}

const some = new Some();
some.on("beforeHi", e => {
  if(condition){
    e.stop(); // When event call to stop, `hi` event not call.
  }
  // `currentTarget` is component instance.
  console.log(some === e.currentTarget); // true

  typeof e.foo; // number
  typeof e.bar; // string
});
some.on("hi", e => {
  typeof e.foo.b; // boolean
});
// If you want to more know event design. You can see article.
// https://github.com/naver/egjs-component/wiki/How-to-make-Component-event-design%3F
```

### once {#once}

<div>
  <span className="badge badge--danger">inherited</span>
</div>

Executed event just one time.

**Returns**: this
- An instance of the component itself

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|eventName|string \| $ts:...|||The name of the event to be attached or an event name - event handler mapped object.|
|handlerToAttach|function \| $ts:...|✔️||The handler function of the event to be attached|

```ts
import Component, { ComponentEvent } from "@egjs/component";

class Some extends Component<{
  hi: ComponentEvent;
}> {
  hi() {
    alert("hi");
  }
  thing() {
    this.once("hi", this.hi);
  }
}

var some = new Some();
some.thing();
some.trigger(new ComponentEvent("hi"));
// fire alert("hi");
some.trigger(new ComponentEvent("hi"));
// Nothing happens
```

### hasOn {#hasOn}

<div>
  <span className="badge badge--danger">inherited</span>
</div>

Checks whether an event has been attached to a component.

**Returns**: boolean
- Indicates whether the event is attached.

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|eventName|string|||The name of the event to be attached|

```ts
import Component from "@egjs/component";

class Some extends Component<{
  hi: void;
}> {
  some() {
    this.hasOn("hi");// check hi event.
  }
}
```

### on {#on}

<div>
  <span className="badge badge--danger">inherited</span>
</div>

Attaches an event to a component.

**Returns**: this
- An instance of a component itself

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|eventName|string \| $ts:...|||The name of the event to be attached or an event name - event handler mapped object.|
|handlerToAttach|function \| $ts:...|✔️||The handler function of the event to be attached|

```ts
import Component, { ComponentEvent } from "@egjs/component";

class Some extends Component<{
  hi: void;
}> {
  hi() {
    console.log("hi");
  }
  some() {
    this.on("hi",this.hi); //attach event
  }
}
```

### off {#off}

<div>
  <span className="badge badge--danger">inherited</span>
</div>

Detaches an event from the component.<br/>If the `eventName` is not given this will detach all event handlers attached.<br/>If the `handlerToDetach` is not given, this will detach all event handlers for `eventName`.

**Returns**: this
- An instance of a component itself

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|eventName|string \| $ts:...|✔️||The name of the event to be detached|
|handlerToDetach|function \| $ts:...|✔️||The handler function of the event to be detached|

```ts
import Component, { ComponentEvent } from "@egjs/component";

class Some extends Component<{
  hi: void;
}> {
  hi() {
    console.log("hi");
  }
  some() {
    this.off("hi",this.hi); //detach event
  }
}
```

## Events
### ready {#event-ready}

<div>

</div>

Event that fires when Flicking's [init()](Flicking#init) is called

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|

### beforeResize {#event-beforeResize}

<div>

</div>

Event that fires when Flicking's [resize()](Flicking#resize) is called, before updating the sizes of panels and viewport.<br />You can update the sizes of panels and viewport with this event, and it'll be applied after [resize()](Flicking#resize) is finished.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|width|number|Previous width of the viewport|
|height|number|Previous height of the viewport|
|element|HTMLElement|The viewport element|

### afterResize {#event-afterResize}

<div>

</div>

Event that fires when Flicking's [resize()](Flicking#resize) is called, after updating the sizes of panels and viewport.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|width|number|New width of the viewport|
|height|number|New height of the viewport|
|prev|object|Previous size of the viewport|
|prev.width|number|Previous width of the viewport|
|prev.height|number|Previous height of the viewport|
|sizeChanged|boolean|A Boolean value indicating whether the width/height of the viewport element is changed|
|element|HTMLElement|The viewport element|

### holdStart {#event-holdStart}

<div>

</div>

Event that fires when user started dragging.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|stop|function|Stop the event action and prevent user from dragging|
|axesEvent|object|[hold](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html#event:hold) event of [Axes](https://naver.github.io/egjs-axes/)|

### holdEnd {#event-holdEnd}

<div>

</div>

Event that fires when user stopped dragging.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|axesEvent|object|[release](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html#event:release) event of [Axes](https://naver.github.io/egjs-axes/)|

### moveStart {#event-moveStart}

<div>

</div>

Event that fires once before first [move](Flicking#event-move) event

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|stop|function|Stop the event action and prevent user from dragging|
|isTrusted|boolean|Boolean that indicates whether the event was generated by a user action|
|holding|boolean|Boolean that indicates whether the user is dragging the viewport element|
|direction|[DIRECTION](DIRECTION)|Moving direction relative to previous position of the camera|
|axesEvent|object|[change](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html#event:change) event of [Axes](https://naver.github.io/egjs-axes/)|

### move {#event-move}

<div>

</div>

Event that fires for every movement

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|stop|function|Stop the event action and prevent user from dragging|
|isTrusted|boolean|Boolean that indicates whether the event was generated by a user action|
|holding|boolean|Boolean that indicates whether the user is dragging the viewport element|
|direction|[DIRECTION](DIRECTION)|Moving direction relative to previous position of the camera|
|axesEvent|object|[change](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html#event:change) event of [Axes](https://naver.github.io/egjs-axes/)|

### moveEnd {#event-moveEnd}

<div>

</div>

Event that fires when the movement is finished by user input release or animation end.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|isTrusted|boolean|Boolean that indicates whether the event was generated by a user action|
|holding|boolean|Boolean that indicates whether the user is dragging the viewport element|
|direction|[DIRECTION](DIRECTION)|Moving direction relative to previous position of the camera|
|axesEvent|object|[finish](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html#event:finish) event of [Axes](https://naver.github.io/egjs-axes/)|

### willChange {#event-willChange}

<div>

</div>

Event that fires when Flicking's active index will be changed. Index will be changed at the [changed](Flicking#event-changed) event.<br />It can be triggered when user finished input, or flicking start to move by method.<br />Calling `stop()` in event will prevent index change and camera movement.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|stop|function|Stop the event action and prevent user from dragging|
|index|number|New active index|
|panel|[Panel](Panel)|New active panel|
|isTrusted|boolean|Boolean that indicates whether the event was generated by a user action|
|direction|[DIRECTION](DIRECTION)|Moving direction from the active panel to the target panel|

### changed {#event-changed}

<div>

</div>

Event that fires when Flicking's index is changed.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|index|number|New index|
|panel|[Panel](Panel)|New active panel|
|prevIndex|number|Previous index|
|prevPanel|[Panel](Panel) \| null|Previous active panel|
|isTrusted|boolean|Boolean that indicates whether the event was generated by a user action|
|direction|[DIRECTION](DIRECTION)|Moving direction from the active panel to the target panel|

### willRestore {#event-willRestore}

<div>

</div>

Event fires when user drag amount not reached [threshold](Flicking#threshold) and is returning to [currentPanel](Flicking#currentPanel)

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|stop|function|Stop the event action and prevent user from dragging|
|index|number|Index of the panel to restore|
|panel|[Panel](Panel)|Panel to restore|
|isTrusted|boolean|Boolean that indicates whether the event was generated by a user action|
|direction|[DIRECTION](DIRECTION)|Moving direction relative to previous position of the camera|

### restored {#event-restored}

<div>

</div>

Event that fires when Flicking has returned to [currentPanel](Flicking#currentPanel)

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|isTrusted|boolean|Boolean that indicates whether the event was generated by a user action|

### select {#event-select}

<div>

</div>

Event that fires when panel is statically click / touched

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|index|number|Selected panel's index|
|panel|[Panel](Panel)|Selected panel|
|direction|[DIRECTION](DIRECTION)|Direction from current camera position to the selected panel's position|

### needPanel {#event-needPanel}

<div>

</div>

Event that fires when an empty panel area is visible at the edge of viewport<br />You can set its threshold with [needPanelThreshold](Flicking#needPanelThreshold)

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|direction|[DIRECTION](DIRECTION)|Direction where new panel is needed. `DIRECTION.PREV` means panels should be [prepend](Flicking#prepend)ed and `DIRECTION.NEXT` means panels should be [append](Flicking#append)ed|

### visibleChange {#event-visibleChange}

<div>

</div>

Event that fires when visible panel inside the viewport changes

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|added|Array&lt;[Panel](Panel)&gt;|Panels that added from previous visible panels|
|removed|Array&lt;[Panel](Panel)&gt;|Panels that removed from previous visible panels|
|visiblePanels|Array&lt;[Panel](Panel)&gt;|Current visible panels|

### reachEdge {#event-reachEdge}

<div>

</div>

Event that fires when camera reaches the maximum/minimum range

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|direction|[DIRECTION](DIRECTION)|Direction indicates whether the camera's position is at the maximum range([DIRECTION.NEXT](DIRECTION)) or minimum range([DIRECTION.PREV](DIRECTION))|

### panelChange {#event-panelChange}

<div>

</div>

Event that fires when a panel is added or removed

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|An Flicking instance that triggered this event|
|eventType|string|Name of the event|
|added|Array&lt;[Panel](Panel)&gt;|An array of new panels added|
|removed|Array&lt;[Panel](Panel)&gt;|An array of panels removed|

